--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ ruff = "^0.6.3"
 pytest-django = "^4.9.0"
 celery = "^5.4.0"
 gunicorn = "^23.0.0"
+pillow = "^10.4.0"
+requests = "^2.32.3"
+redis = "^5.0.8"
+types-requests = "^2.32.0.20240712"
+pytest-mock = "^3.14.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
